force-app/main/default/objects/Course_Template__c/Course_Template__c.object-meta.xml
<CustomObject>
    <label>Course Template</label>
    <nameField>
        <label>Course Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>