force-app/main/default/objects/Course_Template__c/fields/Course_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Course_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Catalog</label>
    <referenceTo>Course_Catalog__c</referenceTo>
    <relationshipLabel>Course Templates</relationshipLabel>
    <relationshipName>Course_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>