force-app/main/default/objects/Course_Template__c/fields/Course_Class_Days__c.field-meta.xml
<CustomField>
    <fullName>Course_Class_Days__c</fullName>
    <label>Course Class Days</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>