force-app/main/default/objects/Course_Template__c/fields/Default_Template__c.field-meta.xml
<CustomField>
    <fullName>Default_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Template</label>
    <type>Checkbox</type>
</CustomField>