force-app/main/default/objects/Course_Template__c/fields/Maximum_Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Hours_Per_Day__c</fullName>
    <label>Maximum Hours Per Day</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>